[gd_scene load_steps=7 format=3 uid="uid://pijr62tkt7mb"]

[ext_resource type="Script" uid="uid://3xxa8if53vo3" path="res://Scenes/Natu's Tests/Enemies/(TD)CommonEnemy.gd" id="1_gr7ad"]
[ext_resource type="Texture2D" uid="uid://0lc7q05ov14n" path="res://Assets/Misc/Main Character/Idle/raw desert.png" id="2_bevlb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_k5b8b"]
radius = 316.697

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k5b8b"]
size = Vector2(117, 184)

[sub_resource type="SpriteFrames" id="SpriteFrames_qi2p4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_bevlb")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gr7ad"]
size = Vector2(149, 209)

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_gr7ad")

[node name="detection_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
position = Vector2(-2, -1)
shape = SubResource("CircleShape2D_k5b8b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, 0)
shape = SubResource("RectangleShape2D_k5b8b")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0.499996, -1.12499)
scale = Vector2(0.114258, 0.120931)
sprite_frames = SubResource("SpriteFrames_qi2p4")
animation = &"Idle"

[node name="enemy_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hitbox"]
position = Vector2(0.5, -1.5)
shape = SubResource("RectangleShape2D_gr7ad")

[node name="take_damage_cooldown" type="Timer" parent="."]
wait_time = 2.996

[node name="do_attack" type="Timer" parent="."]

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="timeout" from="take_damage_cooldown" to="." method="_on_take_damage_cooldown_timeout"]
[connection signal="timeout" from="do_attack" to="." method="_on_do_attack_timeout"]
